--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "project_2",
   "version": "1.0.0",
-  "description": "",
+  "description": "Famous Operas App due 10/29/20 at 9:00 am",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -10,6 +10,10 @@
   "repository": {
     "type": "git",
     "url": "git+https://github.com/hcox2969/Project_2.git"
+  },
+  "engines": {
+    "node":"14.3.0"
+
   },
   "author": "",
   "license": "ISC",
