more on sesssions

--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "url": "git+https://github.com/hcox2969/Project_2.git"
   },
   "engines": {
-    "node":"14.3.0"
-
+    "node": "14.3.0"
   },
   "author": "",
   "license": "ISC",
@@ -22,9 +21,11 @@
   },
   "homepage": "https://github.com/hcox2969/Project_2#readme",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "method-override": "^3.0.0",
     "mongoose": "^5.10.9",
     "nodemon": "^2.0.6",
